@@ -1,16 +1,0 @@
-<HTML>
-<SCRIPT>
-if (window.layoutTestController)
-    layoutTestController.dumpAsText();
-</SCRIPT>
-<BODY>
-<div id="invalid_color_div" style="color:#red;">This test verifies that "color" style attributes with a preceeding '#' are not interpreted as predefined colors.  This text should not be red.</a>
-
-<div id="console" style="color:red">
-    <script type="text/javascript" charset="utf-8">
-        document.write(window.getComputedStyle(document.getElementById("invalid_color_div")).color);
-    </script>
-</div>
-
-</BODY>
-</HTML>
