@@ -1,3 +1,13 @@
+2008-09-04  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Mark Rowe.
+
+        - roll out r36050 because it made svg/custom/invalid-fill-hex.svg fail,
+          and fixing https://bugs.webkit.org/show_bug.cgi?id=15360 appears to
+          require a different approach
+
+        * css/CSSGrammar.y:
+
 2008-09-04  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Eric Seidel.
