@@ -1,5 +1,14 @@
 2008-09-04  Dan Bernstein  <mitz@apple.com>
 
+        - roll out r36050 because it made svg/custom/invalid-fill-hex.svg fail,
+          and fixing https://bugs.webkit.org/show_bug.cgi?id=15360 appears to
+          require a different approach
+
+        * css1/color_and_background/invalid_color-expected.txt: Removed.
+        * css1/color_and_background/invalid_color.html: Removed.
+
+2008-09-04  Dan Bernstein  <mitz@apple.com>
+
         Reviewed by Dave Hyatt.
 
         - test for https://bugs.webkit.org/show_bug.cgi?id=19717
